Fix text overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    overflow-wrap: break-word;
 }
 img {
     max-width: 100%;
